Alteração da cor de fundo do carrossel

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -58,6 +58,7 @@ html{
     align-items: center;
     justify-content: center;
     min-width: 100vw;
+    background-color: rgb(2, 2, 2);
 }
 
 .carousel-caption h1{
